Opened 16 years ago
Closed 16 years ago
#1673 closed bug (fixed)
Clicking clock replicant handle doesn't work
Reported by: | jackburton | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Clicking the clock replicant handle should open a menu. Since some revisions, instead, the click does trigger the skin change, as if the BDragger didn't receive the mouse down event. Might be the B_DRAW_ON_CHILDREN change ?
Change History (3)
comment:1 by , 16 years ago
Component: | - General → Kits/Interface Kit |
---|
comment:2 by , 16 years ago
Status: | new → assigned |
---|
Note:
See TracTickets
for help on using tickets.
Yes, that change probably broke it. Going to look into it.