* the change to support B_DRAW_ON_CHILDREN broke ViewLayer::ViewAt(), ie   mouse events would not be passed to the correct children of views with   B_DRAW_ON_CHILDREN flag set -> fixed. (fixes #1673)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23300 a95241bf-73f2-0310-859d-f6bbb57e9c96